--- a/main.css
+++ b/main.css
@@ -1,3 +1,16 @@
+body {
+    background: url("https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/N13e7awhgiljgescq/videoblocks-black-empty-space-with-stars-dark-science-background-with-movement_rrrhaewqg_thumbnail-full01.png");
+}
+
+#header {
+    color: #5444E8;
+    text-align: center;
+}
+
+h1, h2 {
+    color: white;
+}
+
 img {
     border-radius: 50%;
 }
@@ -5,9 +18,10 @@ img {
 #astros {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    width: 700px;
 }
 
+/* OLEG KONONENKO*/
 #oleg {
     width: 600px;
     display: flex;
@@ -18,12 +32,33 @@ img {
 }
 
 #olegInfo {
+    width: 400px;
+}
+
+/* DAVID ST-JACQUES*/
+#david {
+    width: 600px;
+    display: flex;
+    flex-direction: row;
+}
+#davidPic {
     width: 300px;
 }
 
-#davidPic {
-    display: flex;
-}
 #davidInfo {
+    width: 400px;
+}
+
+/* ANNE MCCLAIN */
+#anne {
+    width: 600px;
     display: flex;
+    flex-direction: row;
+}
+#annePic {
+    width: 300px;
+}
+
+#anneInfo {
+    width: 400px;
 }
